# HomeSupervisor

./: LICENSE  README.md  pyproject.toml
src/: device.py  room.py
