[tool.poetry]
name = "homesupervisor"
version = "0.1.0"
description = "Project for managing devices at home"
authors = ["AlexFourgs <alexandre.fourgs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
